修复一个初始化异常(存在公司信息但不存在公告文件的情形)

--- a/STARMarket/Forms/AboutBox.resx
+++ b/STARMarket/Forms/AboutBox.resx
@@ -601,7 +601,7 @@
 </value>
   </data>
   <data name="textBoxDescription.Text" xml:space="preserve">
-    <value>开源地址  https://github.com/sswest/STARMakert
+    <value>开源地址  https://github.com/sswest/STARMarket
 
 MIT License
 
